--- a/web/static/css/app.scss
+++ b/web/static/css/app.scss
@@ -41,8 +41,26 @@ p.wow {
   width: 100%;
   video {
     width: 100%;
-    //margin: 0 Auto;
   }
+}
+
+.description {
+  display: none;
+  background-color: lighten($page_background, 2%);
+  border-top: 2px solid lighten($page_background, 4%);
+  border-left: 2px solid lighten($page_background, 4%);
+  border-right: 2px solid darken($page_background, 4%);
+  border-bottom: 2px solid darken($page_background, 4%);
+  padding: 6px;
+  border-radius: 1rem;
+}
+
+.close-btn {
+  display: inline;
+}
+
+.gone {
+  color: #999;
 }
 
 /* Submit Button */
@@ -220,6 +238,16 @@ body {
 }
 
 .type-title {
+  color: $red-in-shirt;
+  font-style: italic;
+  font-size: 2.0rem;
+  cursor: pointer;
+  padding: 0 4px;
+  &:hover {
+    background: lighten($orange_shirt, 30%);
+  }
+}
+.type-title-nodesc {
   color: $red-in-shirt;
   font-style: italic;
   font-size: 2.0rem;
@@ -2371,6 +2399,31 @@ section {
     }
   }
 }
+
+
+.ui-btn-small {
+  display: inline-block;
+  background-color: $blue_jeans;
+  background-image: none;
+  text-shadow: none;
+  box-shadow: none;
+  color: white;
+  border: none;
+  border-radius: 0.6rem;
+  padding: 0.6rem 0.6rem;
+  line-height: 1rem;
+  height: 2.4rem;
+  font-weight: bold;
+}
+.ui-btn-small:active, .ui-btn-small:hover, .ui-btn-small:focus {
+  background-color: lighten(#337ab7, 10%);
+  background-image: none;
+  text-shadow: none;
+  box-shadow: none;
+  color: white;
+  text-decoration: none;
+}
+
 
 @media only screen and (min-width: 600px) {
   .container {
