--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -49,7 +49,7 @@
 
 <section class="mod-section s4-pad-top pos-clearfix js-home-section" id="promo">
 <div class="video">
-  <video preload="yes" controls="true" width="100%" height="100%" controls>
+  <video controls="true" width="100%" height="100%" controls>
     <source src="images/LoneStarRuby-promo.mp4" type="video/mp4">
     <a href="images/LoneStarRuby-promo.mp4">LoneStarRuby Video</a>
   </video>
