--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -50,8 +50,8 @@
 <section class="mod-section s4-pad-top pos-clearfix js-home-section" id="promo">
 <div class="video">
   <video controls="true" width="100%" height="100%" controls>
-    <source src="images/LoneStarRuby-promo.mp4" type="video/mp4">
-    <a href="images/LoneStarRuby-promo.mp4">LoneStarRuby Video</a>
+    <source src="images/LoneStarRuby-promo2.mp4" type="video/mp4">
+    <!-- <a href="images/LoneStarRuby-promo2.mp4">LoneStarRuby Video</a> -->
   </video>
 </div>
 
@@ -197,8 +197,8 @@
         <div class="l-tile-content">
           <img alt="Kyle Rames" class="pg-home-speaker-img" src="images/speakers/kyle.png">
           <a href="#kyle"><h3>Kyle Rames</h3></a>
-          <i>github: <a href="http://github.com/<github>">githubname</a></i>
-          <a class="pg-home-speaker-link" href="//twitter.com/<twitter>">@twitter</a>
+          <i>github: <a href="http://github.com/krames">krames</a></i>
+          <a class="pg-home-speaker-link" href="//twitter.com/krames">@krames</a>
 
           <p class="type-secondary type-small pg-home-speaker-bio">
             Kyle Rames is a senior developer for ShopKeep where he 
@@ -218,8 +218,8 @@
         <div class="l-tile-content">
           <img alt="Randy Coulman<name>" class="pg-home-speaker-img" src="images/speakers/randy.jpg">
           <a href="#randy"><h3>Randy Coulman</h3></a>
-          <i>github: <a href="http://github.com/<github>">githubname</a></i>
-          <a class="pg-home-speaker-link" href="//twitter.com/<twitter>">@twitter</a>
+          <i>github: <a href="http://github.com/randycoulman">randycoulman</a></i>
+          <a class="pg-home-speaker-link" href="//twitter.com/randycoulman">@randycoulman</a>
 
           <p class="type-secondary type-small pg-home-speaker-bio">
             Randy Coulman is a Senior Software Engineer at Zeal (@CodingZeal), 
@@ -267,8 +267,8 @@
         <div class="l-tile-content">
           <img alt="Chris McCord" class="pg-home-speaker-img" src="images/speakers/chris.jpg">
           <a href="#chris"><h3>Chris McCord</h3></a>
-          <i>github: <a href="http://github.com/<github>">githubname</a></i>
-          <a class="pg-home-speaker-link" href="//twitter.com/<twitter>">@twitter</a>
+          <i>github: <a href="http://github.com/chrismccord">chrismccord</a></i>
+          <a class="pg-home-speaker-link" href="//twitter.com/chris_mccord">@chris_mccord</a>
 
           <p class="type-secondary type-small pg-home-speaker-bio">
             Chris McCord is the creator of the Phoenix Framework and author of Metaprogramming Elixir. Chris has been an invited speaker on the Phoenix Framework at Erlang Factory 2014, ElixirConf 2014, ElixirConf Europe 2015, and NDC Oslo 2015. In addition, he has conducted Elixir workshops at RailsConf 2014 and CodeMash 2014.
