fixed github link

--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -318,7 +318,7 @@
         <div class="l-tile-content">
           <img alt="Abraham Sangha" class="pg-home-speaker-img" src="images/speakers/abraham.jpg">
           <a href="#abraham"><h3>Abraham Sangha</h3></a>
-          <i>github: <a href="http://github.com/https://github.com/abrahamsangha">abrahamsangha</a></i>
+          <i>github: <a href="http://github.com/abrahamsangha">abrahamsangha</a></i>
           <a class="pg-home-speaker-link" href="//twitter.com/abrahamsangha">@abrahamsangha</a>
 
           <p class="type-secondary type-small pg-home-speaker-bio">
