udpated lev jpg

--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -149,7 +149,7 @@
 
       <li class="l-tile-3">
         <div class="l-tile-content">
-          <img alt="Lev Kravinsky" class="pg-home-speaker-img" src="images/speakers/lev.jpg">
+          <img alt="Lev Kravinsky" class="pg-home-speaker-img" src="images/speakers/lev2.jpg">
           <a href="#lev"><h3>Lev Kravinsky</h3></a>
           <i>github: <a href="http://github.com/levthedev">levthedev</a></i>
           <a class="pg-home-speaker-link" href="//twitter.com/levthedev">@levthedev</a>
