--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -242,7 +242,7 @@
           <i>github: <a href="http://github.com/trevrosen">trevrosen</a></i>
           <a class="pg-home-speaker-link" href="//twitter.com/trevrosen">@trevrosen</a>
           <p class="type-secondary type-small pg-home-speaker-bio js-truncate" data-truncate="400">
-          Trevor Rosen is the leads the Metasploit Architecture Team at Rapid7, 
+          Trevor Rosen leads the Metasploit Architecture Team at Rapid7, 
           where he works on making Ruby (and other languages) do all sorts of fun things 
           in the service of improving information security.<br>
           </p>
