added pic for egypt

--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -251,7 +251,7 @@
 
       <li class="l-tile-3">
         <div class="l-tile-content">
-          <img alt="name" class="pg-home-speaker-img" src="images/speakers/placeholder-headshot.jpg">
+          <img alt="egypt" class="pg-home-speaker-img" src="images/speakers/egypt.jpg">
           <a href="#trevor"><h3>egypt</h3></a>
           <i>github: <a href="http://github.com/egypt">egypt</a></i>
           <a class="pg-home-speaker-link" href="//twitter.com/egyp7">@egyp7</a>
