--- a/web/static/css/app.scss
+++ b/web/static/css/app.scss
@@ -39,8 +39,10 @@ p.wow {
 
 .video {
   width: 100%;
-  video {
-    width: 100%;
+  text-align: center;
+  iframe {
+      margin: 0 auto;
+      display: block;
   }
 }
 
