--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -49,8 +49,8 @@
 
 <section class="mod-section s4-pad-top pos-clearfix js-home-section" id="promo">
 <div class="video">
-  <iframe src="https://player.vimeo.com/video/134203590" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-  <p>Highlights from LoneStarRuby.</p>
+  <iframe src="https://player.vimeo.com/video/134235162" width="500" height="375" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+  <p>LoneStarRuby</p>
 </div>
 
 </section>
