added audio attribution

--- a/web/static/css/app.scss
+++ b/web/static/css/app.scss
@@ -45,6 +45,11 @@ p.wow {
       display: block;
   }
 }
+.attribution {
+  font-size: .75em;
+  display: block;
+  color: #666;
+}
 
 .description {
   display: none;
