--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -50,7 +50,9 @@
 <section class="mod-section s4-pad-top pos-clearfix js-home-section" id="promo">
 <div class="video">
   <iframe src="https://player.vimeo.com/video/134235162" width="500" height="375" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-  <p>LoneStarRuby</p>
+  <p>LoneStarRuby
+  <span class="attribution"><i>Music: "HOEDOWN" by Jason Shaw (http://www.audionautix.com)</i></span>
+  </p>
 </div>
 
 </section>
