--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -572,7 +572,7 @@
         <div class="pg-home-schedule-time">3:15PM</div>
         <div class="pg-home-schedule-info">
           <h3 class="no-mar-top">Chris McCord
-          <span class="type-title">Phoenix: What You Should Know</span>
+          <span class="type-title">Phoenix - Productive. Reliable. Fast.</span>
           </h3>
           <div class="description">
             <p>
