--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -576,7 +576,7 @@
           </h3>
           <div class="description">
             <p>
-              TBA
+              Phoenix is an Elixir web framework for building productive, reliable applications with the performance to take on the modern computing world. Together, we’ll review what makes Phoenix great and how it uses Elixir to optimize code for performance – without sacrificing programmer productivity. Along the way, we’ll see neat features like live-reload and generators and how Phoenix’s realtime layer takes on the modern web.
             </p>
             <button class="close-btn ui-btn-small">Close</button>
           </div>
