--- a/web/templates/layout/application.html.eex
+++ b/web/templates/layout/application.html.eex
@@ -10,6 +10,7 @@
   <link media="screen" rel="stylesheet" href="<%= static_path(@conn, "/css/app.css") %>">
   <!-- <link href='http://fonts.googleapis.com/css?family=Biryani:400,600|Antic' rel='stylesheet' type='text/css'> -->
   <link href='http://fonts.googleapis.com/css?family=Antic' rel='stylesheet' type='text/css'>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 </head>
 
   <%= @inner %>
