--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -733,6 +733,8 @@ Our conference is dedicated to providing a family friendly and harassment-free c
 <section class="mod-section sponsor js-home-section" id="sponsors">
   <h1>Sponsors</h1>
   <ul class="pos-clearfix pg-home-sponsors">
+
+
     <li class="js-modal-trigger bronze">
       <img alt="Stitch Fix" onerror="this.style.display='none'" src="images/sponsors/stitchfix_logo-01_1000w.png">
       <div class="js-modal js-modal-close m-modal">
@@ -748,6 +750,39 @@ Our conference is dedicated to providing a family friendly and harassment-free c
         </div>
       </div>
     </li>
+
+    <li class="js-modal-trigger bronze">
+      <img alt="ConFreaks" onerror="this.style.display='none'" src="images/sponsors/confreaks.png">
+      <div class="js-modal js-modal-close m-modal">
+        <div class="js-modal-content m-modal-content">
+          <div class="m-modal-img-wrap">
+            <img alt="ConFreaks" onerror="this.style.display='none'" src="images/sponsors/confreaks.png">
+          </div>
+          <a href="http://confreaks.com/">ConFreaks.com</a>
+          <p class="type-small">
+          Expert recording services for conferences!
+          <br>
+          Perfect for public conferences and private corporate events.
+          </p>
+        </div>
+      </div>
+    </li>
+
+    <li class="js-modal-trigger bronze">
+      <img width="15px" alt="Big Red" onerror="this.style.display='none'" src="images/sponsors/bigred.png">
+      <div class="js-modal js-modal-close m-modal">
+        <div class="js-modal-content m-modal-content">
+          <div class="m-modal-img-wrap">
+            <img alt="Big Red" onerror="this.style.display='none'" src="images/sponsors/bigred.png">
+          </div>
+          <a href="http://bigred.com/">BigRed.com</a>
+          <p class="type-small">
+          Deliciously Different!
+          </p>
+        </div>
+      </div>
+    </li>
+
   </ul>
 
 
