--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -744,7 +744,7 @@ Our conference is dedicated to providing a family friendly and harassment-free c
           </div>
           <a href="http://www.sharethrough.com/">SHARETHROUGH</a>
           <p class="type-small">
-          Deliver Better Ads.  Our native advertising software is helping the Internet evolve beyond interruptive ads.
+          Sharethrough powers the distribution of meaningful content on mobile devices.  We’re a revenue-positive startup with an inclusive, values-based approach to product design and engineering.  Talk to us if you're interested in working on everything from complex client-side workflows and analytics in Rails and Angular to our data pipeline, real-time decisioning and auction theory in Scala.
           </p>
         </div>
       </div>
